use Stream.toList() instead of collect()